@@ -1,2 +1,1 @@
-<!ENTITY builddate "@BUILDDATE@">
 <!ENTITY version "@PACKAGE_VERSION@">
